[package]
name = "shihon"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Simon Wayne <wasyne@xmail.net>"]
repository = "https://gitlab.com/shihonics/shihon"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "1.9.4"
zeroize = "1.4.3"

[lib]
crate-type = ["cdylib", "lib"]
