[package]
name = "shihon"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Simon W. Parker <wasyne@xmail.net>"]
repository = "https://gitlab.com/shihonics/shihon"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.9.5"
thiserror = "1.0"
spl-token = { version = "3.3", path = "../token/program", features = [ "no-entrypoint" ] }
spl-governance-tools= { version = "0.1.0", path ="../tools"}

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
proptest = "1.0"
solana-program-test = "1.9.5"
solana-sdk = "1.9.5"


[lib]
crate-type = ["cdylib", "lib"]